objects/Project_Activity__c.object
<CustomObject>
    <description>Contains Comments, Start, End Dates and relevant information for an Activity associated with a Milestone.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Milestone__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Assignees_Manager__c</fullName>
        <description>Name of the Manager for the CDK Assignee</description>
        <formula>CDK_Assignee__r.Manager.FirstName  &amp; &quot; &quot; &amp;  CDK_Assignee__r.Manager.LastName</formula>
        <inlineHelpText>This is an autopopulated field that will show the Manager of the assigned associate.</inlineHelpText>
        <label>Activity Assignee&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Definition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Activity Definition</label>
        <referenceTo>Activity_Definition__c</referenceTo>
        <relationshipLabel>Project Activities</relationshipLabel>
        <relationshipName>Project_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date_Final__c</fullName>
        <formula>IF(!ISBLANK(Actual_End_Date__c) &amp;&amp; (Total_Tasks__c - Total_Tasks_Closed__c == 0), Actual_End_Date__c, null)</formula>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Current Max Project Task End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDK_Assignee_Role__c</fullName>
        <label>CDK Assignee Role</label>
        <picklist>
            <picklistValues>
                <fullName>3PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Conversion Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Solutions Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Systems Analyst​​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car!nk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Account Manager (CAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Specialist (Unhook)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Contracting Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Collector​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Specialist (ICD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Artwork Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Installation Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Librarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Follow-Up Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Specialist (Box Upgrade)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Project Manager (Network / IPT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Tax Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Bumper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSM IT Support Analyst</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDK_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDK Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Assignee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Activities</relationshipLabel>
        <relationshipName>Project_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <formula>Milestone__r.Dealer_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales / F&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease &amp; Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_on_PSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on PSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Buffer__c</fullName>
        <formula>IF (!ISBLANK(Planned_End_Date__c),MAX(Planned_End_Date__c - TODAY(),0),0) - (IF (!ISBLANK(Expected_Remaining_Duration__c), Expected_Remaining_Duration__c, 0))</formula>
        <label>Duration Buffer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Remaining_Duration__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expected Remaining Duration</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Time_Spent__c</fullName>
        <label>Expected Time Spent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Activity_Name__c</fullName>
        <formula>Activity_Definition__r.External_Activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Code__c</fullName>
        <inlineHelpText>A code should be selected when the actual end date is greater than the planned end date.</inlineHelpText>
        <label>Hold Code</label>
        <picklist>
            <picklistValues>
                <fullName>HM - MANUFACTURER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HF - FACILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC - CLIENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP - PRODUCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HN - NOSTART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HB - NEW DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD - DATA/CONVERSION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HX - NETWORK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HL - LEGAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HT - TELEPHONY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR - RISK ON CONTRACT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Milestone_Description__c</fullName>
        <formula>Milestone__r.Description__c</formula>
        <label>Milestone Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <referenceTo>Project_Milestone__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Project_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_End_Dt_Delayed_Count__c</fullName>
        <label>Planned End Dt Delayed Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Dt_Delayed_Count__c</fullName>
        <label>Planned Start Dt Delayed Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Step__c</fullName>
        <description>Represents the Process Step associated with parent Project Milestone.</description>
        <formula>TEXT(Milestone__r.Process_Step__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Milestone__r.SubProject__r.Name</formula>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Gauge_Color__c</fullName>
        <formula>IF( Status__c = &apos;At Risk&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAS&quot;, &apos;At Risk&apos;),  
IF(Status__c = &apos;Caution&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAT&quot;, &apos;Caution&apos;),IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAR&quot;, &apos;On Target&apos;)))</formula>
        <inlineHelpText>Red - At Risk
Yellow - Caution
Green - On Target</inlineHelpText>
        <label>Risk Gauge Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <formula>Milestone__r.Site__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( !ISBLANK(Actual_End_Date_Final__c) ,&apos;Complete&apos;, 
IF( ISBLANK(Planned_End_Date__c) ,&apos;On Target&apos;, 
IF( Duration_Buffer__c &lt;= 0,&apos;At Risk&apos;, 
IF( (Duration_Buffer__c &gt; 0) &amp;&amp; ((Duration_Buffer__c + MAX(DATETIMEVALUE(Planned_End_Date__c) - DATETIMEVALUE(TODAY()),0))/MAX(DATETIMEVALUE(Planned_End_Date__c) - DATETIMEVALUE(TODAY()),0) &lt;= 1.25),&apos;Caution&apos;, 
IF((Duration_Buffer__c &gt; 0) &amp;&amp; ((Duration_Buffer__c + MAX(DATETIMEVALUE(Planned_End_Date__c) - DATETIMEVALUE(TODAY()),0))/MAX(DATETIMEVALUE(Planned_End_Date__c) - DATETIMEVALUE(TODAY()),0) &gt; 1.25),&apos;On Target&apos;, 
null 
)))))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_ID__c</fullName>
        <formula>Milestone__r.SubProject__r.Id</formula>
        <label>SubProject ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Name__c</fullName>
        <formula>Milestone__r.SubProject__r.SubProject_Name__c</formula>
        <label>SubProject Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminal_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terminal Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Time_Spent__c</fullName>
        <label>Total Actual Days Spent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expected_Time_Spent__c</fullName>
        <label>Total Expected Time Spent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tasks_Closed__c</fullName>
        <label>Total Tasks Closed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tasks__c</fullName>
        <label>Total Tasks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isActive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isStatusComplete__c</fullName>
        <formula>IF( Status__c = &apos;Complete&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isStatusComplete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>CDK_Assignee__c</columns>
        <columns>Client_Assignee__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AI-{000000000}</displayFormat>
        <label>Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actual_End_Date_Before_Start</fullName>
        <active>true</active>
        <description>Actual End Date cannot occur before Actual Start Date.</description>
        <errorConditionFormula>IF(( NOT(ISBLANK(Actual_End_Date__c)) &amp;&amp; NOT(ISBLANK(Actual_Start_Date__c)) ), ( Actual_End_Date__c  &lt;  Actual_Start_Date__c ), FALSE) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>Actual End Date cannot occur before Actual Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assign_Associate_before_Actual_Dates</fullName>
        <active>true</active>
        <description>An associate (CDK Assignee ) needs to be entered prior to inputting Actual Dates.</description>
        <errorConditionFormula>ISBLANK(CDK_Assignee__c) &amp;&amp;  NOT( ISBLANK(Actual_Start_Date__c ))</errorConditionFormula>
        <errorMessage>A CDK Assignee needs to be filled-in prior to entering Actual Start or End Dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Create_Activity_if_Milestone_Comp</fullName>
        <active>true</active>
        <description>Cannot Create Project Activity Record if Project Milestone is Complete</description>
        <errorConditionFormula>AND (
        NOT( CONTAINS($Setup.CustomSettings__c.Users_Excluded_from_Business_Rules__c, $User.FirstName + &apos; &apos; + $User.LastName) ), 
        Milestone__r.Status__c = &apos;Complete&apos;, ISNEW()
    )</errorConditionFormula>
        <errorMessage>You cannot create a Project Activity record if its parent Project Milestone is already Complete.  Please remove the record that you’re trying to create.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_before_Start_Date</fullName>
        <active>true</active>
        <description>Cannot save a record with Planned/Actual End Date before setting Planned/Actual Start Date.</description>
        <errorConditionFormula>( ISBLANK(Actual_Start_Date__c) &amp;&amp; NOT( ISBLANK(Actual_End_Date__c)) ) || ( ISBLANK(Planned_Start_Date__c) &amp;&amp; NOT( ISBLANK(Planned_End_Date__c)) ) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>Planned / Actual Start Date needs to be specified before specifying a Planned / Actual End Date for the Activity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Future_Actual_Start_End_Dates</fullName>
        <active>true</active>
        <description>Does not allow Actual Start Date or Actual End Date to be in the future.</description>
        <errorConditionFormula>( Actual_Start_Date__c &gt;  TODAY() ) || ( Actual_End_Date__c &gt;  TODAY() ) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>Actual Start and End Dates cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_End_Date_Before_Start</fullName>
        <active>true</active>
        <description>Planned End Date cannot occur before Planned Start Date.</description>
        <errorConditionFormula>IF( ( NOT(ISBLANK(Planned_End_Date__c)) &amp;&amp; NOT(ISBLANK(Planned_Start_Date__c)) ),( Planned_End_Date__c  &lt;  Planned_Start_Date__c ), FALSE ) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>Planned End Date cannot occur before Planned Start Date.</errorMessage>
    </validationRules>
</CustomObject>